# jvmti_http

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: HttpServer.cpp  HttpServer.hpp  JvmtiAccessor.cpp  JvmtiAccessor.hpp  JvmtiHttpException.hpp  JvmtiHttpQuery.cpp  JvmtiHttpQuery.hpp  ZipResource.cpp  ZipResource.hpp  agentmain.cpp  handlers.hpp  jvmti_http.cpp  main.cpp
src/handlers/: GetLiveThreadsCount.cpp  GetStackTrace.cpp  GetSystemProperty.cpp  utils.cpp
test/: App.java
